<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp">
        <LinearLayout
            android:id="@+id/tempLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                />
            <TextView
                android:id="@+id/tempTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/temp"
                android:layout_marginStart="8dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/seaLevelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tempLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sea_level"
                />
            <TextView
                android:id="@+id/seaLevelTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/sea_level"
                android:layout_marginStart="8dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weatherTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/seaLevelLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_title"
                />
            <TextView
                android:id="@+id/weatherTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/sea_level"
                android:layout_marginStart="8dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weatherDescriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/weatherTitleLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_description"
                />
            <TextView
                android:id="@+id/weatherDescriptionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/sea_level"
                android:layout_marginStart="8dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/windSpeedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/weatherDescriptionLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                />
            <TextView
                android:id="@+id/windSpeedTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/sea_level"
                android:layout_marginStart="8dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/windDegreeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/windSpeedLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                />
            <TextView
                android:id="@+id/windDegreeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/sea_level"
                android:layout_marginStart="8dp"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>